# neural_task_abstraction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_script.py  setup.py
lcs/: __init__.py  configs.py  curricula.py  init_mpl.py  jax_utils.py  joint_learning.py  logging.conf  matplotlibrc  mechanism.py  models.py  plotting_utils.py  svd_random_matrix_theory.py  utils.py
lcs/figure_notebooks/: fig2_main.ipynb  fig3_gen_taskswitch.ipynb  fig4_mechanism.ipynb  fig5_NTA_hpam.ipynb  fig6_A5_A6_gating_FC.ipynb  fig7_MNIST.ipynb  figA10_A11_specialization_space.ipynb  figA12_comp_generalization.ipynb  figA13_orthogonality.ipynb  figA14_nonorthog_comp.ipynb  figA16_few_shot.ipynb  figA2_dimensionality.ipynb  figA9_block_size_potential.ipynb
lcs/figure_notebooks/.ipynb_checkpoints/: fig6_A5_A6_gating_FC-checkpoint.ipynb  fig8_task_switching-checkpoint.ipynb  figA1_full_vs_toy-checkpoint.ipynb  figA3_representational_cost-checkpoint.ipynb  figA4_FC_metrics-checkpoint.ipynb  figA7_FC_hpam-checkpoint.ipynb  figA8_NTK_adaptation-checkpoint.ipynb
lcs/shi22/: shi22.py
lcs_mnist/: mnist_hidden_generator_clean.py  mnist_lcs_plotting_utils.py  mnist_lcs_src.py  mnist_learning_clean.py  mnist_src.py
lcs_mnist/.ipynb_checkpoints/: fig7_MNIST-checkpoint.ipynb
